// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavMenu Is hidden 1`] = `
.c0 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  list-style-type: none;
  margin: 0;
  overflow-y: auto;
  padding: 0;
  position: absolute;
  width: 100%;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c1:hover {
  background-color: #DBDEE1;
}

.c1[disabled] {
  color: #B7BBC2;
  pointer-events: none;
}

<ul
  class="c0"
  data-testid="menu-list"
  hidden=""
>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionA"
      href="/testA"
      tabindex="0"
    >
      <span
        class="c2"
      >
        Option A
      </span>
    </a>
  </li>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionB"
      href="/testB"
      tabindex="0"
    >
      <span
        class="c2"
      >
        Option B
      </span>
    </a>
  </li>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionC"
      href="/testC"
      tabindex="0"
    >
      <span
        class="c2"
      >
        Option C
      </span>
    </a>
  </li>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionD"
      href="/testD"
      tabindex="0"
    >
      <span
        class="c2"
      >
        Option D
      </span>
    </a>
  </li>
</ul>
`;

exports[`NavMenu Matches the snapshot 1`] = `
.c0 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  list-style-type: none;
  margin: 0;
  overflow-y: auto;
  padding: 0;
  position: absolute;
  width: 100%;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c1:hover {
  background-color: #DBDEE1;
}

.c1[disabled] {
  color: #B7BBC2;
  pointer-events: none;
}

<ul
  class="c0"
  data-testid="menu-list"
>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionA"
      href="/testA"
      tabindex="0"
    >
      <span
        class="c2"
      >
        Option A
      </span>
    </a>
  </li>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionB"
      href="/testB"
      tabindex="0"
    >
      <span
        class="c2"
      >
        Option B
      </span>
    </a>
  </li>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionC"
      href="/testC"
      tabindex="0"
    >
      <span
        class="c2"
      >
        Option C
      </span>
    </a>
  </li>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionD"
      href="/testD"
      tabindex="0"
    >
      <span
        class="c2"
      >
        Option D
      </span>
    </a>
  </li>
</ul>
`;
